[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/BioSans_Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Characters/InteractionPrompts/MechEditor/TabButton.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 80
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 112
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[node name="TabButton" type="Label"]
margin_left = 20.0
margin_right = 469.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 224.5, 50 )
focus_mode = 2
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 0.894118, 1 )
custom_colors/font_color_shadow = Color( 0.376471, 0.54902, 0.678431, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 1
text = "Tab Button"
align = 1
valign = 1
uppercase = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftBracket" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -73.0
margin_right = -112.0
margin_bottom = 66.0
mouse_filter = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 0.894118, 1 )
custom_colors/font_color_shadow = Color( 0.376471, 0.54902, 0.678431, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 1
text = "["
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightBracket" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 112.0
margin_top = -73.0
margin_right = 150.0
margin_bottom = 66.0
mouse_filter = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 0.894118, 1 )
custom_colors/font_color_shadow = Color( 0.376471, 0.54902, 0.678431, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 1
text = "]"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/focus = SubResource( 3 )
toggle_mode = true
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="focus_entered" from="." to="." method="_on_TabButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_TabButton_focus_exited"]
[connection signal="toggled" from="TabButton" to="." method="_on_TabButton_toggled"]
